# bdsim

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENCE.txt  Makefile.in  README  README.md  README.txt  bdsim.cc  bitbucket-pipelines.yml  doxygen.cnf.in
analysis/: .CMakeLists.txt.swp  Analysis.cc  Analysis.hh  AnalysisUser.cc  AnalysisUser.hh  AnalysisUserLinkDef.hh  AnalysisUtilities.cc  AnalysisUtilities.hh  AnalysisUtilitiesLinkDef.hh  Beam.cc  Beam.hh  BeamAnalysis.cc  BeamAnalysis.hh  BeamAnalysisLinkDef.hh  BeamLinkDef.hh  BinGeneration.cc  BinGeneration.hh  BinLoader.cc  BinLoader.hh  BinSpecification.cc  BinSpecification.hh  BinSpecificationLinkDef.hh  CMakeLists.txt  Config.cc  Config.h  Config.hh  ConfigLinkDef.h  ConfigLinkDef.hh  Data.cc  Data.hh  DataLinkDef.hh  DataLoader.cc  DataLoader.hh  DataLoaderLinkDef.hh  Event.cc  Event.hh  EventAnalysis.cc  EventAnalysis.hh  EventAnalysisLinkDef.hh  EventAnalysisOrbit.cc  (+133 more)
analysis/obsolete/: AnalysisUser.cc  AnalysisUser.hh  AnalysisUserLinkDef.hh  HistogramMerge.cc  HistogramMerge.hh  HistogramMergeLinkDef.hh  Utility.cc  Utility.hh  UtilityBeam.cc  UtilityBeam.hh  UtilityBeamLinkDef.hh  UtilityLinkDef.hh  UtilityModel.cc  UtilityModel.hh  UtilityModelLinkDef.hh  comparison.cc
analysis/old/: UtilityBeam.cc  UtilityBeam.hh  UtilityBeamLinkDef.hh  UtilityLinkDef.hh  UtilityModel.cc  UtilityModel.hh  UtilityModelLinkDef.hh
comparator/: CMakeLists.txt  Compare.cc  Compare.hh  Result.hh  ResultEvent.hh  ResultEventTree.hh  ResultHistogram.hh  ResultHistogram2D.hh  ResultSampler.hh  ResultTree.hh  comparator.cc
configuration/: BDSVersion.hh  BDSVersionData.hh  CMakeLists.txt  bdsim.sh.in  version.h
convert/: CMakeLists.txt  ptc2Bdsim.cc
convert/inc/: Particles.hh  TfsFile.hh
convert/src/: Particles.cc  TfsFile.cc
examples/: CMakeLists.txt  README  examples.rst
examples/ATF2/: ATF2lat_BX10BY1m.gmad  CMakeLists.txt  atf2.gmad  atf2.rst  atf2_beam.gmad  atf2_components.gmad  atf2_options.gmad  atf2_sequence.gmad
examples/AWAKE/: CMakeLists.txt  awake.gmad  options.gmad
examples/ILC/: ilc.rst
examples/LHC/: output.txt  output.txt.REMOVED.git-id  twiss.4.0tev.b1.tfs.REMOVED.git-id  twiss.4.0tev.b2.tfs.REMOVED.git-id
examples/LHC_new/: twiss.3.5tev.b2.tfs.REMOVED.git-id
examples/airwatertarget/: CMakeLists.txt  air.gmad  airwatertarget.rst
examples/atf2/: CMakeLists.txt  analysisConfig.txt  atf2.rst
examples/beamDump/: CMakeLists.txt  bd.gmad  beamDump.rst  plotXY.py  spirograph.gmad
examples/beamLoss/: CMakeLists.txt  beamLoss.rst  bl.gmad
examples/collimation/: CMakeLists.txt  analysisConfig.txt  analysisConfigSimple.txt  beamcore.gmad  collimation-hits-all-minke.gmad  collimation-hits-all.gmad  collimation-hits-ion-minke.gmad  collimation-hits-ion.gmad  collimation-hits-minke.gmad  collimation-hits.gmad  collimation-simple.rst  collimation.gmad  collimation.rst  collimationOptics.gmad
examples/diamond/: CMakeLists.txt  dia-nlsige.gmad  dia-nlsige_beam.gmad  dia-nlsige_components.gmad  dia-nlsige_options.gmad  dia-nlsige_sequence.gmad  diamond.rst
examples/features/: CMakeLists.txt  README
examples/field_modulation/: CMakeLists.txt  time-varying-fields.gmad
examples/fodoRing/: CMakeLists.txt  fodoRing_options.gmad
examples/lhc/: CMakeLists.txt  lhc.rst  lhc2017.gmad  lhc2017_beam.gmad  lhc2017_components.gmad  lhc2017_options.gmad  lhc2017_sequence.gmad
examples/model-model/: model-model.rst
examples/no-accelerator/: bad-hierarchy.gmad  boxofwater.gdml  makeboxofwater.py  maketunnel.py  placements-only.gmad  tunnel.gdml  world-tunnel.gmad  world.gmad
examples/paperMachine/: README  Untitled.ipynb
examples/simpleCollimation/: CMakeLists.txt  sc.gmad  simpleCollimation.rst
examples/simpleCollimation2/: CMakeLists.txt  sc2-all.gmad  sc2-ion.gmad  sc2.gmad
examples/simpleMachine/: CMakeLists.txt  simpleMachine.rst  sm.gmad
examples/trajectories/: proton-target.gmad  rebdsimaveragehistograms.py  simpleloop.py
interpolator/: BDSIQuery.cc  BDSIQuery.hh  CMakeLists.txt  bdsinterpolator.cc
modules/: AWAKE.cmake  CMakeLists.txt
modules/AWAKE/: CMakeLists.txt
modules/dicom/: CMakeLists.txt  README
modules/nistmaterials/: CMakeLists.txt  makematerialfile.cc
parser/: CMakeLists.txt  README  aperture.cc  aperture.h  array.cc  array.h  atom.cc  atom.h  beam.cc  beam.h  beamBase.cc  beamBase.h  blmplacement.cc  blmplacement.h  cavitymodel.cc  cavitymodel.h  colour.cc  colour.h  crystal.cc  crystal.h  element.cc  element.h  elementtype.cc  elementtype.h  enums.h  fastlist.h  field.cc  field.h  getEnv.cc  getEnv.h  gmad.cc  material.cc  material.h  modulator.cc  modulator.h  newcolour.cc  newcolour.h  options.cc  options.h  optionsBase.cc  (+30 more)
parser/obsolete/: csample-removal.txt  generating-rule-examples.txt
parser/test/: CMakeLists.txt  accessattribute.gmad  accessoption.gmad  addsampler_all_partID_filter.gmad  addsampler_multiple_partID_filter.gmad  addsampler_partID_filter.gmad  aperture.gmad  atom.gmad  beam.gmad  blm.gmad  cavitymodel.gmad  colour.gmad  crystal.gmad  definereservedfunction.gmad  definereservedname.gmad  definereservedstringvariable.gmad  definereservedvariable.gmad  duplicateName-aperture.gmad  duplicateName-atom.gmad  duplicateName-blm.gmad  duplicateName-cavitymodel.gmad  duplicateName-colour.gmad  duplicateName-field.gmad  duplicateName-material.gmad  duplicateName-modulator.gmad  duplicateName-query.gmad  duplicateName-region.gmad  duplicateName-samplerplacement.gmad  duplicateName-scorer.gmad  duplicateName-scorermesh.gmad  duplicateName-tunnel.gmad  duplicateName-xsecbias.gmad  extend.gmad  extendatom.gmad  (+44 more)
src-external/: CMakeLists.txt  gzstream.tgz
test/: BDSBunchTest.cc  BDSFieldTester.cc  BDSInterpolatorTester.cc  BDSLinkTester.cc  BDSModelTreeTester.cc  BDSSixTrackTester.cc  BDSSixtrackInterface.cc  BDSTrajectoryTester.cc  CMakeLists.txt  FieldTest.cc  FieldTest.old  SixtrackTest.cc  TH1SetTest.cc  TrajectoryTest.cc  compareInterpolation.py  converttobdsim.py  fieldplotter.py  lhccrystals.gmad  link-test.cc  purefieldplotter.py
(+3488 files in other folders)
